--- a/starter/app/src/main/res/layout/asteroid_list_item.xml
+++ b/starter/app/src/main/res/layout/asteroid_list_item.xml
@@ -12,6 +12,8 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@{asteroid.id}" />
+        android:text="@{asteroid.id}"
+        android:textColor="@color/default_text_color"
+        tools:text="Dummy text" />
 
 </layout>
