Add content description and use picasso instead

--- a/starter/app/src/main/res/layout/fragment_main.xml
+++ b/starter/app/src/main/res/layout/fragment_main.xml
@@ -28,7 +28,7 @@
                 android:layout_height="match_parent"
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
-                app:imageUrl="@{viewModel.pictureOfDay.url}"/>
+                app:pictureOfDayImg="@{viewModel.pictureOfDay}"/>
 
             <TextView
                 android:id="@+id/textView"
